--- a/UI/coven/components/menu.html
+++ b/UI/coven/components/menu.html
@@ -6,6 +6,9 @@
         data-bs-target="#modal" data-modal-name="create-card"
         onclick="setModalName(this)"> Создать
         карту </button>
+    <button class="btn btn-primary" data-bs-toggle="modal"
+        data-bs-target="#modal" data-modal-name="remote-storage"
+        onclick="setModalName(this)"> Хранилище </button>
 </div>
 
 <script>
