--- a/UI/coven/components/create_character.html
+++ b/UI/coven/components/create_character.html
@@ -10,7 +10,7 @@
         <div class="mb-3">
             <label for="character-name">Имя</label>
             <input class="form-control" type="text" id="character-name"
-                name="character-name">
+                name="character-name" required>
         </div>
         <!-- ROLE -->
         <div class="mb-3">
