--- a/UI/coven/components/menu.html
+++ b/UI/coven/components/menu.html
@@ -9,6 +9,7 @@
     <button class="btn btn-primary" data-bs-toggle="modal"
         data-bs-target="#modal" data-modal-name="remote-storage"
         onclick="setModalName(this)"> Хранилище </button>
+    <button class="btn btn-primary" onclick="window.open('/editor')"> Редактор </button>
 </div>
 
 <script>
