--- a/UI/coven/static/style/editor.css
+++ b/UI/coven/static/style/editor.css
@@ -1,4 +1,8 @@
-.objects-view{
+.objects-view {
     overflow: auto;
-    height: 300px;
+    height: 1000px;
+}
+
+.object-view-element{
+    cursor: pointer;
 }
