--- a/UI/coven/layouts/editor.html
+++ b/UI/coven/layouts/editor.html
@@ -92,7 +92,9 @@
                 </div>
             </div>
             <div class="col">
-                <canvas id="card-canvas"></canvas>
+                <div class="row justify-content-center align-items-center">
+                    <canvas id="card-canvas"></canvas>
+                </div>
             </div>
             <div class="col">
                 <div class="row">
