simple save card + update view on tab get's active

--- a/UI/coven/components/generated_cards_view.html
+++ b/UI/coven/components/generated_cards_view.html
@@ -11,7 +11,7 @@
                 {{$value}}
             </button>
         </div>
-        <div id="collapse-{{$key}}" class="accordion-collapse collapse">
+        <div id="collapse-{{$key}}" class="accordion-collapse collapse show">
             <div class="accordion-body">
                 <div id="chapter-{{$key}}"
                     class="row row-cols-4 g-2 overflow-auto">
