--- a/UI/coven/layouts/main.html
+++ b/UI/coven/layouts/main.html
@@ -13,6 +13,7 @@
     <script src="assets/js/lib/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/modal.js" defer></script>
     <script src="assets/js/cards.js" defer></script>
+    <script type="module" src="assets/js/coven/cards_manager.js" defer></script>
 </head>
 
 <body>
