--- a/UI/coven/components/complete_cards_chapter.html
+++ b/UI/coven/components/complete_cards_chapter.html
@@ -1,5 +1,5 @@
 {{range .Cards}}
-<div class="card-preview">
-    {{template "character_card" .}}
+<div>
+    {{template "card_view" .}}
 </div>
 {{end}}
