card add\delete\edit

--- a/UI/coven/layouts/editor.html
+++ b/UI/coven/layouts/editor.html
@@ -119,9 +119,9 @@
     <form id="save-result-form" hx-post="/card" hx-trigger="saveCanvasEvent"
         hx-swap="innerHTML" hx-target="#save-response" style="display: none;">
         <input type="hidden" name="cardType" id="cardType" />
-        <input type="hidden" name="cardName" id="cardName">
-        <input type="hidden" name="dataType" id="dataType" />
-        <input type="hidden" name="data" id="data" />
+        <input type="hidden" name="cardName" id="cardName" />
+        <input type="hidden" name="jsonData" id="jsonData" />
+        <input type="hidden" name="pngData" id="pngData" />
     </form>
 
     <div class="modal fade modal-lg" id="modal" data-bs-backdrop="static"
