--- a/UI/coven/components/card_types_selection.html
+++ b/UI/coven/components/card_types_selection.html
@@ -1,6 +1,6 @@
 <section class="container-fluid">
     <div class="row">
-        <div class="d-flex flex-wrap gap-3 my-2">
+        <div id="cards-type-selector" class="d-flex flex-wrap gap-3 my-2">
             {{range $key, $label := .}}
             <div class="form-check" style="flex: 0 0 30%;">
                 <input class="form-check-input" type="radio" name="group"
