--- a/UI/coven/layouts/editor.html
+++ b/UI/coven/layouts/editor.html
@@ -45,6 +45,14 @@
                         <div class="accordion-body">
                             <div class="row">
                                 <div class="col">
+                                    Шрифт:
+                                    <select id="font-selector" class="form-select" disabled>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col">
                                     Цвет: <input type="color"
                                         id="toolbar-txt-color" disabled>
                                 </div>
